fix(avatars): ensure the default image background is covered by the profile image

--- a/packages/fxa-content-server/app/styles/_avatars.scss
+++ b/packages/fxa-content-server/app/styles/_avatars.scss
@@ -24,6 +24,7 @@
 
 
   img {
+    background-color: $content-background-color;
     display: block;
     height: $avatar-size;
     width: $avatar-size;
